--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "faker": "^6.6.6",
     "mysql2": "^2.3.3",
-    "sequelize": "^5.22.5"
+    "sequelize": "^5.22.5",
+    "sequelize-cli": "^6.6.1"
   }
 }
